jaiminho/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jaiminho
  namespace: staging
  labels:
    app: jaiminho
spec:
  replicas: 5
  selector:
    matchLabels:
      app: jaiminho
  template:
    metadata:
      labels:
        app: jaiminho
    spec:
      containers:
      - name: jaiminho
        image: rafa93br/jaiminho:1.0.0
        ports:
        - containerPort: 3002
