jaiminho/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaiminho
  namespace: staging
spec:
  ports:
  - name: http
    targetPort: 3002
    port: 80
    protocol: TCP
  selector:
    app: jaiminho
